--- a/index.html
+++ b/index.html
@@ -50,17 +50,23 @@
       </div>
       <div class="row" ng-controller="ListingsController">
         <div class="col-md-6">
-          <div class="input-group" id="searchBar">
+          <div class="input-append" id="searchBar">
             <!--Finished
                 //To do: Seach by option
                 Implement a way to filter through listings using the search bar
               -->
 
-            <span class="input-group-addon" id="sizing-addon1"><span class="glyphicon glyphicon-search"></span></span>
-            <input type="text" class="form-control"  placeholder="Search" ng-model = "searchText">
+            <div style="display:flex"><!-- <div class="input-group-addon" id="sizing-addon1"><span class="glyphicon glyphicon-search"></span></span> -->
+              <input style="width:490px; margin-right:40px" type="text" class="form-control"  placeholder="Search" ng-model = "searchText[searchSelect]" >
 
+              <select type = "button" class = "btn btn-info dropdown-toggle" data-toggle = "dropdown"  aria-haspopup="true" aria-expanded="false" ng-model = "searchSelect" >
+              <div class = "caret"> </div>
+                <option value = "code">Code</option>
+                <option value = "name">Building Name</option>
+              </select>
+            </div>
           </div>
-          <div class="tableWrapper">
+          <div class="tableWrapper" style = "height: 500px;">
             <table class="table table-striped table-hover">
               <tr>
                 <th>Code</th>
@@ -75,11 +81,11 @@
                 -->
                 <!--Showing all rows with delete button, and remove row when button is clicked
                     Note: track by needs to be at the end of the expression-->
-                <tr ng-repeat = "x in listings |filter: searchText track by $index" ng-click = "showDetails($index)" >
+                <tr ng-repeat = "x in listings |filter: searchText track by $index" ng-click = "showDetails(x)" >
                   <td> {{x.code}}</td>
                   <td> {{x.name}}</td>
                   <td>
-                    <button type = "button" class = "btn btn-warning" ng-click = "deleteListing($index)"> Delete </button>
+                    <button type = "button" class = "btn btn-warning" ng-click = "deleteListing(x)"> Delete </button>
                   </td>
                 </tr>
             </table>
@@ -87,9 +93,10 @@
           <!-- Finished
               Write an HTML form that adds new listings to the directory
             -->
+              <div class = "page-header"> </div>
           </div>
         <div class="col-md-6">
-          <div class="jumbotron">
+          <div class="display-5">
             <h2>Detailed Information</h2>
             <!--
               Include a way to display detailed information about an individual listing:
@@ -97,7 +104,7 @@
              -->
         </div>
         <div class="tableWrapper">
-         <table class="table table-bordered">
+         <table class="table table-hover">
             <tr>
               <th>Code</th>
                 <td> {{code}} </td>
@@ -116,17 +123,32 @@
             </tr>
           </table>
       </div>
-      Code:
-        <input type = 'text' ng-model = "newCode" required>
-      Building name:
-        <input type = 'text' ng-model = "newBuildingName" required>
+      <div style="display:flex">
+      <h5 style = "padding-bottom: 10px">Code:</h5>
+        <input style = "width: 150px; margin-left: 10px; margin-right: 10px" class = "form-control mb-2 mr-sm-2 mb-sm-0" type = 'text'  ng-model = "newCode" placeholder="AAA" required>
+      <h5 style = "padding-bottom: 10px">Building name:</h5>
+        <input style = "width: 230px; margin-left: 10px"class = "form-control mb-2 mr-sm-2 mb-sm-0" type = 'text' ng-model = "newBuildingName" placeholder = "Awesome Apple Auditorium" required>
+      </div>
+      <div style="display:flex">
+        <h5 style = "padding-bottom: 10px">Latitude:</h5>
+        <input style = "width: 200; margin-left: 10px; margin-right: 10px"class = "form-control mb-2 mr-sm-2 mb-sm-0" type = 'text' ng-model = "newLatitude" placeholder="####.##">
+        <h5 style = "padding-bottom: 10px">Longitude:</h5>
+        <input style = "width: 200px; margin-left: 10px; margin-right: 10px"class = "form-control mb-2 mr-sm-2 mb-sm-0" type = 'text' ng-model = 'newLongitude' placeholder="####.##">
+      </div>
+      <div style="display:flex">
+        <h5>Address:</h5>
+        <input style = "width: 450px; margin-left: 10px; margin-right: 10px"class = "form-control mb-2 mr-sm-2 mb-sm-0" type = 'text' ng-model = "newAddress" placeholder = "1024 Newton Road, Utopia, JS">
       <!-- To do: Adding optional coordinates and address
                   Limiting Code to three uppercase letters
       -->
       <!-- Detail:
         <input type = 'text' ng-model = "newDetail"> -->
-      <button type = "button" class = "btn btn-success" ng-click = 'addListing($index)'> Add </button>
+      <button type = "button" class = "btn btn-success" ng-click = 'addListing()'> Add </button>
+  </div>
+<div class = "page-header"> </div>
     </div>
+
+
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js" integrity="sha512-K1qjQ+NcF2TYO/eI3M6v8EiNYZfA95pQumfvcVrTHtwQVDG+aHRqLi/ETn2uB+1JqwYqVG3LIvdm9lj6imS/pQ==" crossorigin="anonymous"></script>
